[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/script/mission/Get_mission.gd" type="Script" id=1]
[ext_resource path="res://assets/font/K.tres" type="DynamicFont" id=2]

[node name="Get_mission" type="Node2D"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 340.806
margin_top = 34.0
margin_right = 475.806
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="GridContainer"]
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 26.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 52.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="GridContainer"]
margin_top = 78.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="GridContainer"]
margin_top = 96.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 9.0
margin_top = -2.0
margin_right = 433.0
margin_bottom = 258.0
__meta__ = {
"_edit_use_anchors_": false
}
